kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flais-nam-oauth-client-validator
spec:
  selector:
    matchLabels:
      app: flais-nam-oauth-client-validator
  replicas: 1
  template:
    metadata:
      labels:
        app: flais-nam-oauth-client-validator
      annotations:
        prometheus.io/path: /infra/nam/oauth/clients/validator/actuator/prometheus
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: flais-nam-oauth-client-validator
          image: "ghcr.io/fintlabs/flais-nam-oauth-client-validator:sha-0000000"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 350Mi
              cpu: 200m
            requests:
              memory: 300Mi
              cpu: 50m

        - name: stunnel
          image: ghcr.io/fintlabs/vigo-auth-organisation-selector-ldap-proxy:sha-05c9d22
          ports:
            - containerPort: 389

          resources:
            limits:
              memory: "100Mi"
              cpu: "50m"
            requests:
              memory: "30Mi"
              cpu: "10m"
