kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flais-nam-oauth-client-validator
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
