kustomize/base/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flais-nam-oauth-client-validator
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`d.flais.io`) && PathPrefix(`/infra/nam/oauth/clients/validator`)
      kind: Rule
      services:
        - name: flais-nam-oauth-client-validator
          port: 8080
